unpackaged/main/default/objects/nbavs__DeviceMapping__c/nbavs__DeviceMapping__c.object-meta.xml
<CustomObject>
    <label>DeviceMapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeviceMappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>