unpackaged/main/default/objects/nbavs__DeviceMapping__c/fields/nbavs__Device__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Device__c</fullName>
    <label>Device</label>
    <referenceTo>nbavs__Device__c</referenceTo>
    <relationshipLabel>DeviceMappings</relationshipLabel>
    <relationshipName>DeviceMappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>