unpackaged/main/default/objects/nbavs__DeviceMapping__c/fields/nbavs__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DeviceId__c</fullName>
    <formula>nbavs__Device__r.nbavs__Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device API ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>